# richwomanbtc.github.io

./: Makefile  README.md  index.html  pyproject.toml
.github/workflows/: update_research.yml
_auto_contents/: awards.md  metadata.yml  papers.md  presentations.md  profile.md  research_keywords.md
_contents/: research.md
_data/: research_data.json
assets/css/: style.css
assets/images/: site.webmanifest
assets/js/: main.js  simple-loader.js
scripts/: fetch_and_convert.py  fetch_researchmap.py  serve.py
