[tool.poetry]
name = "researcher-website"
version = "0.1.0"
description = "Personal researcher website"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
# beautifulsoup4は必要ない場合は削除
# pytest は dev-dependencies に移動

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
